[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zoe"
version = "0.1.0"
description = "A ligthweight Python web framework for building APIs"
authors = [{ name = "Lucas S. Brites" }]
readme = "README.md"
requires-python = ">3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["source"]
