[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zoe-framework"
version = "0.1.0-alpha"
description = "A lightweight Python web framework for building APIs"
authors = [{ name = "Lucas Silva Brites" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["web", "framework", "api", "http", "rest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.setuptools.packages.find]
where = ["source"]
